- Removed sorted argument for listboxes.
- Added default "stretch" to every toplevel layout, assuring that
  such layout gets at least all available space assigned.
- (un)set "maximize box" when "resizeable" is set.
- Removed default "wxTAB_TRAVERSAL" style on frames (to make the grid
  work correctly).
- Renamed "WXCore.WxcClassTypes" to "WXCore.WxcClassInfo".

Backward compatible additions:
- Added custom control demo.
- Made "refresh" erase the background too.
- Added "children" attribute for windows.
- Added "border" attribute for windows.
- Added "tabTraversal" attribute for windows.
- Added wxGrid events and demo (samples/wx/Grid.hs).
- Improved signatures for wxGrid.
- Added "changes.txt" file :-)
- Added "HAS_RADIO_MENU_ITEMS" to "isDefined".
- Added support for radio menu items.
- New wxHaskell+HOpenGL sample added to the contributions. Thanks
  to Shelarcy and Sean Seefried.
- Added "Align" and "Wrapped" classes to set alignment
  and wrap mode for text controls.
- Added "Sorted" class to set the sort mode of choice, combo box,
  and listbox controls.
- Added "creation time" attributes that use reflective attributes
  not compositional (and thus not so nice), but very convenient!
- Added "entry" as shorthand for "textEntry"
- Added "SystemColor" and "colorSystem" to get standard system colors.
- Defaulted background color of "Frame"s to Color3DFace (as a Panel).
- Made the definition of "Closure" in "wrappers.h" more liberal to 
  support wxOCaml better.
- Added "frameCentre" method
- Huge internal changes: split up wxcClasses in three files and added
  support for managed objects like bitmaps. Also added checks for NULL 
  pointers. 


Bug fixes:
- HtmlLinkClicked events are now properly generated.
- Fixed bug that crashed wxHaskell when a tree control had the focus
  and a key was pressed. Thanks to Olivier Spier for sending a fix.
- The "item" attribute of a list control always returned the first