@@ -21,12 +21,14 @@ module Graphics.UI.WX
   , module Graphics.UI.WX.Types
   , module Graphics.UI.WX.Attributes
   , module Graphics.UI.WX.Classes
+  , module Graphics.UI.WX.Variable
   , module Graphics.UI.WX.Layout
   , module Graphics.UI.WX.Events
 
   , module Graphics.UI.WX.Window
   , module Graphics.UI.WX.Frame
   , module Graphics.UI.WX.Timer
+  , module Graphics.UI.WX.Media
   , module Graphics.UI.WX.Menu
   , module Graphics.UI.WX.Controls
   , module Graphics.UI.WX.Dialogs
@@ -36,12 +38,14 @@ module Graphics.UI.WX
 import Graphics.UI.WX.Types
 import Graphics.UI.WX.Attributes
 import Graphics.UI.WX.Classes
+import Graphics.UI.WX.Variable
 import Graphics.UI.WX.Layout
 import Graphics.UI.WX.Events
 
 import Graphics.UI.WX.Window
 import Graphics.UI.WX.Frame
 import Graphics.UI.WX.Timer
+import Graphics.UI.WX.Media
 import Graphics.UI.WX.Menu
 
 import Graphics.UI.WX.Controls
